model binding works, no validations though

--- a/EventChatbot/Views/Chat/Index.cshtml
+++ b/EventChatbot/Views/Chat/Index.cshtml
@@ -107,10 +107,10 @@
                   <div class="col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center align-items-center text-center">
                     <div>
                       <h3>Monday</h3>
-                      <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group" name="Availability[0].Name" value="monday" >
-                        <input type="checkbox" class="btn-check" id="MondayAM" autocomplete="off" name="Availability[0].AM" value="true">
+                      <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group">
+                        <input type="checkbox" class="btn-check" id="MondayAM" autocomplete="off" name="Availability.Monday.AM" value="true">
                         <label class="btn btn-primary" for="MondayAM">AM</label>
-                        <input type="checkbox" class="btn-check" id="MondayPM" autocomplete="off" name="Availability[0].PM" value="true">
+                        <input type="checkbox" class="btn-check" id="MondayPM" autocomplete="off" name="Availability.Monday.PM" value="true">
                         <label class="btn btn-primary" for="MondayPM">PM</label>
                       </div>
                     </div>
@@ -119,11 +119,11 @@
                   <div class="col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center align-items-center text-center">
                     <div>
                       <h3>Tuesday</h3>
-                      <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group" name="Availability[1].Name" value="tuesday" >
+                      <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group" >
                         <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group" >
-                          <input type="checkbox" class="btn-check" id="TuesdayAM" autocomplete="off" name="Availability[1].AM" value="true">
+                          <input type="checkbox" class="btn-check" id="TuesdayAM" autocomplete="off" name="Availability.Tuesday.AM" value="true">
                           <label class="btn btn-primary" for="TuesdayAM">AM</label>
-                          <input type="checkbox" class="btn-check" id="TuesdayPM" autocomplete="off" name="Availability[1].PM" value="true">
+                          <input type="checkbox" class="btn-check" id="TuesdayPM" autocomplete="off" name="Availability.Tuesday.PM" value="true">
                           <label class="btn btn-primary" for="TuesdayPM">PM</label>
                         </div>
                       </div>
@@ -133,10 +133,10 @@
                   <div class="col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center">
                     <div>
                       <h3>Wednesday</h3>
-                        <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group" name="Availability[2].Name" value="wednesday" >
-                          <input type="checkbox" class="btn-check" id="WednesdayAM" autocomplete="off" name="Availability[2].AM" value="true">
+                        <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group" >
+                          <input type="checkbox" class="btn-check" id="WednesdayAM" autocomplete="off" name="Availability.Wednesday.AM" value="true">
                           <label class="btn btn-primary" for="WednesdayAM">AM</label>
-                          <input type="checkbox" class="btn-check" id="WednesdayPM" autocomplete="off" name="Availability[2].PM" value="true">
+                          <input type="checkbox" class="btn-check" id="WednesdayPM" autocomplete="off" name="Availability.Wednesday.PM" value="true">
                           <label class="btn btn-primary" for="WednesdayPM">PM</label>
                         </div>
                     </div>
@@ -145,10 +145,10 @@
                   <div class="col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center">
                     <div>
                       <h3>Thursday</h3>
-                      <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group" name="Availability[3].Name" value="thursday">
-                        <input type="checkbox" class="btn-check" id="ThursdayAM" autocomplete="off" name="Availability[3].AM" value="true">
+                      <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group" >
+                        <input type="checkbox" class="btn-check" id="ThursdayAM" autocomplete="off" name="Availability.Thursday.AM" value="true">
                         <label class="btn btn-primary" for="ThursdayAM">AM</label>
-                        <input type="checkbox" class="btn-check" id="ThursdayPM" autocomplete="off" name="Availability[3].PM" value="true">
+                        <input type="checkbox" class="btn-check" id="ThursdayPM" autocomplete="off" name="Availability.Thursday.PM" value="true">
                         <label class="btn btn-primary" for="ThursdayPM">PM</label>
                       </div>
                     </div>
@@ -158,10 +158,10 @@
                   <div class="col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center">
                     <div>
                       <h3>Friday</h3>
-                      <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group" name="Availability[4].Name" value="friday">
-                        <input type="checkbox" class="btn-check" id="FridayAM" autocomplete="off" name="Availability[4].AM" value="true">
+                      <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group">
+                        <input type="checkbox" class="btn-check" id="FridayAM" autocomplete="off" name="Availability.Friday.AM" value="true">
                         <label class="btn btn-primary" for="FridayAM">AM</label>
-                        <input type="checkbox" class="btn-check" id="FridayPM" autocomplete="off" name="Availability[4].PM" value="true">
+                        <input type="checkbox" class="btn-check" id="FridayPM" autocomplete="off" name="Availability.Friday.PM" value="true">
                         <label class="btn btn-primary" for="FridayPM">PM</label>
                       </div>
                     </div>
@@ -170,10 +170,10 @@
                   <div class="col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center">
                     <div>
                       <h3>Saturday</h3>
-                      <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group" name="Availability[5].Name" value="saturday">
-                        <input type="checkbox" class="btn-check" id="SaturdayAM" autocomplete="off" name="Availability[5].AM" value="true">
+                      <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group">
+                        <input type="checkbox" class="btn-check" id="SaturdayAM" autocomplete="off" name="Availability.Saturday.AM" value="true">
                         <label class="btn btn-primary" for="SaturdayAM">AM</label>
-                        <input type="checkbox" class="btn-check" id="SaturdayPM" autocomplete="off" name="Availability[5].PM" value="true">
+                        <input type="checkbox" class="btn-check" id="SaturdayPM" autocomplete="off" name="Availability.Saturday.PM" value="true">
                         <label class="btn btn-primary" for="SaturdayPM">PM</label>
                       </div>
                     </div>
@@ -182,10 +182,10 @@
                   <div class="col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center">
                   <div>
                     <h3>Sunday</h3>
-                    <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group" name="Availability[6].Name" value="sunday">
-                      <input type="checkbox" class="btn-check" id="SundayAM" autocomplete="off" name="Availability[6].AM" value="true">
+                    <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group">
+                      <input type="checkbox" class="btn-check" id="SundayAM" autocomplete="off" name="Availability.Sunday.AM" value="true">
                       <label class="btn btn-primary" for="SundayAM">AM</label>
-                      <input type="checkbox" class="btn-check" id="SundayPM" autocomplete="off" name="Availability[6].PM" value="true">
+                      <input type="checkbox" class="btn-check" id="SundayPM" autocomplete="off" name="Availability.Sunday.PM" value="true">
                       <label class="btn btn-primary" for="SundayPM">PM</label>
                     </div>
                   </div>
