fixed small interface problems

--- a/EventChatbot/Views/Home/Index.cshtml
+++ b/EventChatbot/Views/Home/Index.cshtml
@@ -88,6 +88,8 @@
         </div>
 </footer>
 
+<script src="~/js/site.js" ></script>
+
 <!-- Include jQuery, Popper.js, and Bootstrap JS (in the correct order) -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
@@ -100,5 +102,7 @@
 
 <!-- FullCalendar JS -->
 <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/main.min.js"></script>
+    
+
 
 <script src="script.js"></script> <!-- JS Dosyasını Bağla -->
