added Leen's css modifications. corrected the padding so that the input doesn't overlap with the last message.

--- a/EventChatbot/Views/Chat/Index.cshtml
+++ b/EventChatbot/Views/Chat/Index.cshtml
@@ -225,7 +225,7 @@
     <div id="chat">
        
     </div>
-        <div class="text-bubble pad"></div>
+        <div class=" pad"></div>
         
         <div id="send" class="d-flex justify-content-center align-items-center">
           <form>
