--- a/EventChatbot/wwwroot/css/chat.css
+++ b/EventChatbot/wwwroot/css/chat.css
@@ -9,6 +9,9 @@ h1{
     margin-bottom: 50px;
     text-align: center;
 }
+#h1-modal3{
+    margin-bottom: 30px !important;
+}
 input{
     margin: auto;
 }
