added the rabbitmqservice. have no idea if it works. tomorrow will be a brand new anyhoo ciao

--- a/EventChatbot/Views/Chat/Index.cshtml
+++ b/EventChatbot/Views/Chat/Index.cshtml
@@ -236,7 +236,7 @@
         <div class=" pad"></div>
         
         <div id="send" class="d-flex justify-content-center align-items-center">
-          <form>
+          <form asp-action="GetResponse" method="post">
          
               <textarea name="" id="text"></textarea>
               <button type="submit"  id="submit" class="btn btn-sm">
