--- a/EventChatbot/Views/Chat/Index.cshtml
+++ b/EventChatbot/Views/Chat/Index.cshtml
@@ -7,10 +7,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="\lib\bootstrap\dist\css\bootstrap.min.css" rel="stylesheet">
+    <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <link href="css\chat.css" rel="stylesheet">
+    <link href="~/css/chat.css" rel="stylesheet">
    
 
     <title>Chat with our bot! </title>
@@ -232,14 +232,14 @@
 
     <div id="chat">
         @{
-          List<Message> messages = ViewBag.ChatHistory;
+          Stack<Message> messages = ViewBag.ChatHistory;
           
           foreach(Message message in messages){
             if(message.Sender == "Bot"){
-              <div class="bot text-bubble">@message.Content</div>
+              <div class="bot text-bubble"><p>@Html.Raw(message.Content)</p></div>
             }
             else{
-              <div class="user text-bubble">@message.Content</div>
+              <div class="user text-bubble"><p>@Html.Raw(message.Content)</p></div>
 
             }
           }
@@ -249,15 +249,11 @@
         <div class=" pad"></div>
         
         <div id="send" class="d-flex justify-content-center align-items-center">
-          <form asp-action="GetResponse" method="post">
-         
-              <textarea name="message" id="text"></textarea>
-              <button type="submit"  id="submit" class="btn btn-sm">
+          <form asp-controller="Chat" asp-action="GetResponse" method="post">
+            <textarea name="message" id="text"></textarea>
+            <button type="submit" id="submit" class="btn btn-sm">
                 <i class="bi bi-arrow-up-circle h1"></i>
-              </button>
-    
-    
-            
+            </button>
           </form>
         </div>
       </div>
@@ -270,11 +266,20 @@
                 var myModal = new bootstrap.Modal(document.getElementById('modal1'));
                 myModal.show();  // This opens the modal
             });
+             
+
         </script>
       
         }
       }
+      <script>
+          window.onload = function() {
+            window.scrollTo(0, document.body.scrollHeight);
+          };
+
+      </script>
       
+      <!--  
       <script>
           
             const chat = document.getElementById('chat');
@@ -306,9 +311,12 @@
             {
                 event.preventDefault();
                 addChatBubble(chatInput.value);
+                form.submit();
             });
 
-      </script>
+            
+
+      </script>-->
 
     
 </body>
